--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-<style>
-	body {
-		background-color: black;
-	}
-</style>
-<canvas></canvas>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Jumps</title>
+		<style>
+			body {
+				background-color: black;
+			}
+		</style>
+	</head>
+	<body>
+		<canvas></canvas>
 
-<script type="module" src="index.js"></script>
+		<script type="module" src="index.js"></script>
+	</body>
+</html>
