--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<body>
 		<canvas></canvas>
 
-		<script type="module" src="index.js"></script>
+		<script src="./js/classes/CollisionBlock.js"></script>
+		<script src="./js/classes/Sprite.js"></script>
+		<script src="./js/classes/Player.js"></script>
+		<script src="./js/data/collisions.js"></script>
+		<script src="index.js"></script>
 	</body>
 </html>
